<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/color_dark">



    <com.bdznh.fhztelemetry.ForzaHorizonDashboard
        android:id="@+id/forza_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/car_info"
        app:speed_text_size="70sp"
        app:gears_circle_radius="20dp"
        app:gears_circle_stroke_size="3dp"
        app:gears_text_size="40sp"
        app:steer_external_circle_radius="93dp"
        app:steer_internal_circle_raidus="25dp"
        app:steer_link_line_size="3dp"/>

    <TableLayout
        android:id="@+id/car_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/button_margin">
        <TableRow>
            <ImageView
                android:id="@+id/startpause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/carclass"
                android:layout_margin="@dimen/text_margin"/>
            <ImageView
                android:id="@+id/stop"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/text_margin"
                android:text="A"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/carclass"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/carclass"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="A"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/carid"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/carid"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="123456"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/carperform"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_perform"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="800"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/car_category"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_category"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/car_category_11"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/drive_train_type"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_drive_train_type"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/drive_train_type_0"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/power"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_power"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="1000"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/torque"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_torque"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="800"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/car_clutch"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_clutch"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="0%"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/car_handbrake"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_handbrake"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="0%"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/brake"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_brake"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="0%"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/accel"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"/>
            <TextView
                android:id="@+id/car_accel"
                android:textColor="@color/white"
                android:layout_margin="@dimen/text_margin"
                android:text="0%"/>
        </TableRow>
    </TableLayout>
    <View
        android:id="@+id/view_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>